# pyeg0

./: .gitattributes  .gitignore  README.md  stan-eg1.py
Filing0/: Filing0.py  Filing0TestCase.py  Makefile  README.md  itest1.py
anomalies/: anomalies.R  isofor0.R
basket/: basket0.ipynb
blris/: Makefile  ris0.awk  ris1.awk  ris2.awk  ris3.awk
br/: br0.R  br00.R  br2.R  br3.R  br3a.R  br4.R  br5.R  br8.R
br/bak/: weather-2018.ods  xncas1.ods
brcl/: README.md
brcl/bak/: Data Science Interview Exercise.docx
brcl/src/: br0.R  br1.R  br2.R  br3.R  br3a.R  br3b.R  br4.R  brA0.R
bt0/: Bt0.py  Bt1.py  BtXml.py  bt0.cfg  bt0.py  bt0Test.py
caret/classr1/: dstr.mk  smava.mk  smava00.R  smava00.ipynb  smava00.odp  smava01.R  smava01.ipynb  smava02.ipynb  smava03.ipynb  smava04.ipynb
cntmg/: weather.ipynb
cntmg/cache/: source.list
cntmg/conf/: dev-requirements.in  requirements.in
cntmg/src/: having.sql  weather.py
codeassess/: t.txt  try.c  try1.c
conda-ctl/: README  base-3_7.list  base-3_7.yml  base.list  base.yaml  gensim.yaml  x-base.list
corv/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.ac  corv-opt.c  corv-opt.def  corv-opt.h  corv.1  corv.c  corv.lsm.in  corv.spec.in  llist.c  system.h  updater  xmalloc.c
corv/m4/: acinclude.m4
corv/src/: Makefile.am
corv/src/equi0/: Makefile.am  README  checkopt.def  equi.cpp  equi.hpp  equi0.cpp  test0.sh
corv/src/rb/: Makefile.am  simple_test.sh  text_rb.sh  text_red_black_tree.c
cpta/: README  checks0.ipynb  cpta.mk  cpta1.ipynb  cpta2.ipynb  cpta2a.ipynb  setup.cfg  setup.py
cpta/cpta/: _Functors.py
cpta/tests/: test_Test.py
dash0/plotly/: line-chart.py
dash0/src/: gdp1.py  stock.py
dunnh/: dunn.sh
dunnh/ldr/: causal.load1.q  cmpgn.load1.q  cmpgnd.load1.q  cpn.load1.q  cpnr.load1.q  defs.mk  flds.list  fls.lst  fls1.lst  hh.load1.q  ldr.mk  loaders.mk  prod.load1.q  trns.load1.q  trns.mk
eg/: cpp0.cpp  dispatch0.py
fca/: Makefile  README  checks0.ipynb  fca.mk  fca0.ipynb  fca1.ipynb  fca2.ipynb  nzv.R  setup.cfg
fca/fca/: _Functors.py
fca/tests/: test_Test.py
flights/: README.md
flights/bak/: flight.csv
flights/doc/: flight.xlsx
flights/src/: caret0.R  caret1.R  caret2.R  flight-nb.R  flight0.R  flight1.R  mutagen.R  results-nb.txt
frctllbs/: Makefile  README.rst  setup.cfg
frctllbs/frctl/: _Queue.py  _Stack.py  __init__.py  __main__.py
frctllbs/tests/: test.txt  test_Test.py  test_Test1.py
frctllbs/twttr/: Makefile  README.txt  pom.xml
fx0/: README.md  fx0-wip.q  fx01.q  tbls.q
fx0/taq/: taq.k
gapi/analytics/: README
gapi/gce/: README.md  gce.py  gce0.py  main.py  settings.json
gbl/: boundjoin.sql  cmpl2.csv  cmpl2.ods  tran-cmpl2.sql  trans.csv
gensim/: Makefile  Notes.txt  demo0.py  gensim.ipynb
gensim/helper/: _GenSim1.py  __init__.py
gensim/tests/: test_Test.py
geoip/ldr/: br.load.q  cn.load.q  de.load.q  defs.mk  en.load.q  es.load.q  fr.load.q  ipv4.load.q  ipv6.load.q  ja.load.q  ldr.mk  ru.load.q
geoip/mkr/: geoip-wip.q  geoip.q  geoip1.q  geop-wip.q  mkr.mk
geoip/rp/: fraud0.R  rp.mk  rp0.R  rp1.R
gmus/: GMus0.py  GMus00.py  GMus00TestCase.py  GMus0TestCase.py  Makefile  README  README.md  alfa.txt  gmus0  gmus0-doc.cfg  gmus0.R  test0.py  test1.py
hcc/: README  archive.mk  top2.mk
hcc/R/: brA0.R
hcc/a2d/: a2d.mk  hcc3.R
hcc/bldr/: 2csv.q  README-xweaves  chk1.q  dcover0.q  look0.q  samples1.q  samples1a.q  samples1b.q  samples1c.q  samples1d.q  samples1e.q  samples1f.q  samples1g.q  tables0.q  (+2 more)
hotels/: README  top.mk
ij/: Makefile  music-v5_1.rng  music-v5_1.xsd
jr/: README.md
lag/: Makefile  README.rst  lag_  setup.cfg
lag/lag/: _Part.py  _Queue.py  _Redact.py  __init__.py  __main__.py
lag/tests/: banned_words.txt  profane.txt  prose.txt  test_Test.py  test_Test1.py  test_Test2.py
lyd/: Makefile
mcast/: Future.py  MCclt.py  MCsrv.py  UDPrecv.py  UDPsend.py  recv.py  send.py
minfo/: MANIFEST.in  MInfo.py  MInfo1.py  MInfoTestCase.py  MInfoTestCase1.py  MInfoTestCase2.py  Makefile  MediaInfoExample.py  README  README.md  README.rst  gmus0-doc.cfg  minfo0  setup.cfg  setup.py  test0.py
minfo/contrib/: MediaInfoDLL3.py
minfo/minfo/: MInfo0.py  MInfo1.py  MInfoTestCase.py  MInfoTestCase2.py  README.md  __init__.py  __main__.py  _version.py
minfo/tests/: MInfoTestCase.py  MInfoTestCase1.py  MInfoTestCase2.py  test_MInfo.py  test_MInfo1.py
neo4j/: README  authors.html  index.html  movies.html  ports.csv
nextA/: Makefile  RandomGen.py  RandomGenTestCase.py
nlp/: tidytopic.R
off-site/: debian-packages.lst
pandas0/: README.md
paysim1/: top.mk
pru/: README.md
py0.tmpl/: Makefile  README  checks0.ipynb
pyg/: pygsheets.ipynb
pyq/: kdb0.py
pyvote/: Makefile  README  demo0.py  pyvote-Copy1.ipynb  pyvote-Copy2.ipynb  pyvote.ipynb  requirements.txt  setup.cfg  setup.py
pyvote/contrib/: README.rst
pyvote/pyvote/: _Vote.py  __init__.py
pyvote/tests/: test_Test.py  test_Test1.py
qsrc/: demo0.q  mail-client.q  mailer.q
rvlt0/: README.md  anal0.q  anal1.ipynb  anal1.q  anal2.ipynb  anal2.q  anal3.ipynb  anal3.q  csv0.awk  csv1.awk  devices.load.q  files.txt  ldr.mk  ldr0.q  ldr0.sql  notifications.load.q  pgsql.ipynb  rvlt0.xlsx  test0.q  transactions.load.q  trns.load.q  users.load.q
sky0/: Makefile  README  checks0.ipynb  hi-temp.ipynb  hi-temp.py  july.ipynb  july.py  outside-temp.ipynb  outside-temp.py  residuals0.ipynb
stst/: stst01.R
t/corv/: Makefile.am  configure.ac
tickdata/: README.md  tickdata_.sh
weaves/: AUTHORS  ChangeLog  LICENSE.txt  MANIFEST.in  Makefile  README  requirements.txt  setup.cfg  setup.py  weaves.cfg  weaves.ipynb
weaves/tests/: test_Test1.py  test_Test2.py  test_Test3.py
weaves/weaves/: _Functors.py  _MCast.py  _POSet.py  __init__.py  _version.py  preferences.py
wrldrmt/: README.md  data.load.q  data.mk  demo0.ipynb  diabetes.csv  exercise0.ipynb  exercise1.ipynb  methods-for-dealing-with-imbalanced-data.ipynb  plot_all_scaling.ipynb  plot_anomaly_comparison.ipynb  plot_ols.ipynb  stan0.ipynb
(+212 files in other folders)
