[metadata]
name = weaves-cpta
author = Walter Eaves
author-email = walter.d.eaves@gmail.com
summary = ONS Population analysis
description-file = README
home-page = https://githeub.com/eepgwde/pyeg0
license = GPLv3+
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
keywords =
    population
    novasim
[options]
test_suite = tests
[files]
packages =
    cpta
data_files =
    doc/weaves-cpta = cache/out/*
[pbr]
warnerrors = true
autodoc_tree_index_modules = True
