[metadata]
name = frctl
author = Walter Eaves
author_email = walter.eaves@mail.ch
summary = Demonstrates data structures
home-page = http://github.com/weaves/frctl
license = MIT
description-file = README.rst
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Topic :: Development :: Structures :: Recursive
keywords =
    multimedia
    audio
    chapters

[files]
packages =
    frctl
data_files =
    etc/frctl = etc/*
    doc/frctl = contrib/*
[entry_points]
console_scripts =
    frctl = frctl.__main__:main
frctl.config.drivers =
    frctl = frctl.cfg.driver:Plain

[pbr]
warnerrors = true
autodoc_tree_index_modules = True
