[metadata]
name = lag
author = Walter Eaves
author_email = walter.eaves@mail.ch
summary = Demonstrates data structures
home-page = http://github.com/weaves/lag
license = MIT
description-file = README.rst
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Topic :: Development :: Structures :: Recursive
keywords =
    text

[files]
packages =
    lag
data_files =
    etc/lag = etc/*
    doc/lag = contrib/*

[options]
zip_safe = False
include_package_data = True
install_requires =
  docopt

[entry_points]
console_scripts =
    lag = lag.__main__:main
lag.config.drivers =
    lag = lag.cfg.driver:Plain

[pbr]
warnerrors = true
autodoc_tree_index_modules = True
