[metadata]
name = minfo
author = Walter Eaves
author-email = napoleon.1er.bonaparte@gmail.com
summary = Chapters file generation for MP4Box
description-file = README
home-page = https://github.com/eepgwde/pyeg0/tree/jr2/minfo
license = GPLv3+
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: End Users/Desktop
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Topic :: Multimedia :: Sound/Audio :: Analysis
keywords =
    multimedia
    audio
    chapters
[files]
packages =
    minfo
data_files =
    etc/minfo = etc/*
    doc/minfo = contrib/*
[entry_points]
console_scripts =
    minfo = minfo.__main__:main
minfo.config.drivers =
    minfo = minfo.cfg.driver:Plain

[pbr]
warnerrors = true
autodoc_tree_index_modules = True