[metadata]
name = pyvote
author = Walter Eaves
author-email = napoleon.1er.bonaparte@gmail.com
summary = Voting algorithms
description-file = README
home-page = https://githeub.com/eepgwde/pyeg0
license = GPLv3+
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
keywords =
    voting
    data-structures
[files]
packages =
    pyvote
data_files =
    etc/weaves = etc/*
    doc/weaves = contrib/*
[pbr]
warnerrors = true
autodoc_tree_index_modules = True
