
# prompt> make
# builds everything and links in test program test_rb
#
# prompt> make mem_check
# Rebuilds everything using dmalloc and does memory testing.
# Only works if you have dmalloc installed (see http://dmalloc.com).

noinst_PROGRAMS=redblack
redblack_SOURCES=test_red_black_tree.c red_black_tree.c stack.c misc.c





